--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,7 @@ dmypy.json
 # Project specific
 *.asv
 *.nii
+debug.mat
 old/
 backup/
 pruebas/
@@ -138,4 +139,5 @@ templates/
 release/
 releases/
 compiled/
+compile/
 7zip/
